--- a/index.html
+++ b/index.html
@@ -156,12 +156,19 @@
                         </div>
                         <div class="form-group">
                             <label for="filterHospital">Filter by Hospital</label>
-                            <select id="filterHospital" onchange="filterRecords()">
+                            <select id="filterHospital" onchange="filterRecords()">        
                                 <option value="">All Hospitals</option>
                             </select>
                         </div>
                         <div class="form-group">
+                            <label for="filterPatient">Filter by Patient</label>
+                            <select id="filterPatient" onchange="filterRecords()">
+                                <option value="">All Patients</option>
+                            </select>
+                        </div>
+                        <div class="form-group">
                             <button class="btn btn-secondary" onclick="clearFilters()">Clear Filters</button>
+                            <button class="btn btn-primary" onclick="exportPatientHistory()" style="margin-left: 10px;" id="exportPatientBtn" disabled>Export Patient History</button>Clear Filters</button>
                         </div>
                     </div>
                 </div>
@@ -243,3 +250,4 @@
     <script src="app.js"></script>
 </body>
 </html>
+
