Add date range PDF export functionality
- Replaced single date filter with date range (start and end dates)
- Added Export Date Range button in View Records tab
- Implemented exportDateRangeReport() function
- Generates comprehensive PDF reports with:
  - Summary statistics (total visits, unique patients, revenue)
  - Detailed record listing with all filters applied
  - Service breakdown table
  - Professional formatting with logo and hospital branding
- Updated displayRecords() to filter by date ranges
- Updated clearFilters() to clear date range inputs
- Works with all existing filters (patient, service, hospital)

--- a/index.html
+++ b/index.html
@@ -168,7 +168,8 @@
                         </div>
                         <div class="form-group">
                             <button class="btn btn-secondary" onclick="clearFilters()">Clear Filters</button>
-                            <button class="btn btn-primary" onclick="exportPatientHistory()" style="margin-left: 10px;" id="exportPatientBtn" disabled>Export Patient History</button>Clear Filters</button>
+                            <button class="btn btn-primary" onclick="exportPatientHistory()" style="margin-left: 10px;" id="exportPatientBtn" disabled>Export Patient History</button>
+                            <button class="btn btn-primary" onclick="exportDateRangeReport()" style="margin-left: 10px;" id="exportDateRangeBtn">Export Date Range</button>Clear Filters</button>
                         </div>
                     </div>
                 </div>
@@ -250,4 +251,6 @@
     <script src="app.js"></script>
 </body>
 </html>
+
+
 
