--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                         <div class="form-group">
                             <button class="btn btn-secondary" onclick="clearFilters()">Clear Filters</button>
                             <button class="btn btn-primary" onclick="exportPatientHistory()" style="margin-left: 10px;" id="exportPatientBtn" disabled>Export Patient History</button>
-                            <button class="btn btn-primary" onclick="exportDateRangeReport()" style="margin-left: 10px;" id="exportDateRangeBtn">Export Date Range</button>Clear Filters</button>
+                            <button class="btn btn-primary" onclick="exportDateRangeReport()" style="margin-left: 10px;" id="exportDateRangeBtn">Export Date Range</button>
                         </div>
                     </div>
                 </div>
@@ -255,6 +255,8 @@
     <script src="app.js"></script>
 </body>
 </html>
+
+
 
 
 
