--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
                     <div class="form-group">
                         <label for="fee">Fee for Care (₦) *</label>
-                        <input type="number" id="fee" min="0" step="0.01" required>
+                        <input type="number" id="fee" min="0" step="0.01">
                     </div>
 
                     <div class="form-group">
@@ -255,6 +255,7 @@
     <script src="app.js"></script>
 </body>
 </html>
+
 
 
 
