--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,14 @@
             </div>
         </header>
 
+        <!-- Install PWA Banner -->
+        <div id="installBanner" style="display: none; background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); color: white; padding: 12px 20px; text-align: center; border-radius: 8px; margin: 15px 0; box-shadow: 0 4px 6px rgba(0,0,0,0.1);">
+            <p style="margin: 0 0 10px 0; font-weight: 600;">📱 Install Dr Nnadi's Records</p>
+            <p style="margin: 0 0 10px 0; font-size: 14px;">Access patient records offline and get app-like experience!</p>
+            <button id="installButton" style="background: white; color: #667eea; border: none; padding: 10px 30px; border-radius: 5px; font-weight: 600; cursor: pointer; font-size: 15px;">Install App</button>
+            <button onclick="document.getElementById('installBanner').style.display='none'" style="background: transparent; color: white; border: 1px solid white; padding: 10px 20px; border-radius: 5px; font-weight: 600; cursor: pointer; margin-left: 10px; font-size: 15px;">Maybe Later</button>
+        </div>
+
         <!-- Navigation Tabs -->
         <div class="tabs">
             <button class="tab-button active" onclick="showTab('record')">New Record</button>
@@ -301,9 +309,40 @@
         window.addEventListener('beforeinstallprompt', (e) => {
             e.preventDefault();
             deferredPrompt = e;
-            // Show install button/banner if desired
+            // Show install banner
+            const installBanner = document.getElementById('installBanner');
+            if (installBanner) {
+                installBanner.style.display = 'block';
+            }
             console.log('PWA install available');
         });
+
+        // Install button click handler
+        document.addEventListener('DOMContentLoaded', () => {
+            const installButton = document.getElementById('installButton');
+            if (installButton) {
+                installButton.addEventListener('click', async () => {
+                    if (deferredPrompt) {
+                        deferredPrompt.prompt();
+                        const { outcome } = await deferredPrompt.userChoice;
+                        console.log(`User response: ${outcome}`);
+                        deferredPrompt = null;
+                        document.getElementById('installBanner').style.display = 'none';
+                    }
+                });
+            }
+        });
+
+        // Detect when app is installed
+        window.addEventListener('appinstalled', (evt) => {
+            console.log('App installed successfully');
+            document.getElementById('installBanner').style.display = 'none';
+        });
+
+        // Check if already installed (standalone mode)
+        if (window.matchMedia('(display-mode: standalone)').matches || window.navigator.standalone === true) {
+            console.log('App is running in standalone mode');
+        }
     </script>
     <script src="app.js"></script>
 
