--- a/public/index.html
+++ b/public/index.html
@@ -39,6 +39,19 @@
             <button onclick="document.getElementById('installBanner').style.display='none'" style="background: transparent; color: white; border: 1px solid white; padding: 10px 20px; border-radius: 5px; font-weight: 600; cursor: pointer; margin-left: 10px; font-size: 15px;">Maybe Later</button>
         </div>
 
+        <!-- Import Phone Data Banner -->
+        <div id="importDataBanner" style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); color: white; padding: 15px 20px; border-radius: 8px; margin: 15px 0; box-shadow: 0 4px 6px rgba(0,0,0,0.1);">
+            <div style="display: flex; align-items: center; justify-content: space-between; gap: 15px; flex-wrap: wrap;">
+                <div style="flex: 1; min-width: 200px;">
+                    <p style="margin: 0 0 5px 0; font-weight: 600; font-size: 16px;">📱 Have existing data on your phone?</p>
+                    <p style="margin: 0; font-size: 14px; opacity: 0.95;">Click here to import and sync your Chrome app records to the cloud →</p>
+                </div>
+                <button onclick="importAndSyncPhoneData()" style="background: white; color: #667eea; border: none; padding: 12px 24px; border-radius: 5px; font-weight: 600; cursor: pointer; font-size: 15px; white-space: nowrap;">
+                    🔄 Import Phone Data
+                </button>
+            </div>
+        </div>
+
         <!-- Navigation Tabs -->
         <div class="tabs">
             <button class="tab-button active" onclick="showTab('record')">New Record</button>
