Add refresh button and force cloud reload for cross-device sync

--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,12 @@
                 <h2>Niger Foundation Hospital Enugu</h2>
                 <p class="department">Burns Plastic and Reconstructive Surgery Services</p>
             </div>
+            <div style="display: flex; flex-direction: column; gap: 10px; align-items: flex-end;">
+                <button onclick="refreshFromCloud()" style="background: white; color: #2a5298; border: 2px solid white; padding: 8px 16px; border-radius: 5px; cursor: pointer; font-weight: 600; font-size: 14px;" title="Refresh data from cloud">
+                    🔄 Refresh
+                </button>
+                <div id="headerSyncStatus" style="font-size: 12px; color: white; opacity: 0.9;"></div>
+            </div>
         </header>
 
         <!-- Install PWA Banner -->
